--- a/portal-viaje/package.json
+++ b/portal-viaje/package.json
@@ -5,7 +5,8 @@
     "mongodb": "^6.3.0",
     "mongoose": "^6.12.5",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "slugify": "^1.6.6"
   },
   "name": "portal-viaje",
   "version": "1.0.0",
