--- a/portal-viaje/package.json
+++ b/portal-viaje/package.json
@@ -5,8 +5,10 @@
     "mongodb": "^6.3.0",
     "mongoose": "^6.12.5",
     "morgan": "^1.10.0",
+    "ndb": "^1.1.5",
     "nodemon": "^3.0.2",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.11.0"
   },
   "name": "portal-viaje",
   "version": "1.0.0",
@@ -15,7 +17,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "prod": "NODE_ENV=production nodemon server.js"
+    "prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "",
   "license": "ISC",
