--- a/portal-viaje/package.json
+++ b/portal-viaje/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "prod": "NODE_ENV=production nodemon server.js",
+    "prod": "set NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js"
   },
   "author": "",
