--- a/portal-viaje/config.env
+++ b/portal-viaje/config.env
@@ -5,3 +5,5 @@ PASSWORD = jcMUpkUSwHsb1PdM
 DATABASE = mongodb+srv://cristian:<PASSWORD>@cluster0.vlmhgsw.mongodb.net/natours?retryWrites=true&w=majority
 DATABASE_LOCAL = mongodb://localhost:27017/natours
 DATABASE_PASSWORD = jcMUpkUSwHsb1PdM
+JWT_SECRET = aZ16xr6?bxbtJ+Lpp~Fu.v+_Uh+9-
+JWT_EXPIRES_IN = 1d
