--- a/portal-viaje/package.json
+++ b/portal-viaje/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^6.12.5",
     "morgan": "^1.10.0",
