--- a/portal-viaje/config.env
+++ b/portal-viaje/config.env
@@ -7,3 +7,9 @@ DATABASE_LOCAL = mongodb://localhost:27017/natours
 DATABASE_PASSWORD = jcMUpkUSwHsb1PdM
 JWT_SECRET = aZ16xr6?bxbtJ+Lpp~Fu.v+_Uh+9-
 JWT_EXPIRES_IN = 360000
+EMAIL_USERNAME = 2f50e4943b4436
+EMAIL_PASSWORD = 50cc89daaa0ff6
+EMAIL_HOST = sandbox.smtp.mailtrap.io
+EMAIL_PORT = 25
+
+
