--- a/portal-viaje/package.json
+++ b/portal-viaje/package.json
@@ -8,6 +8,7 @@
     "mongoose": "^6.12.5",
     "morgan": "^1.10.0",
     "ndb": "^1.1.5",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "slugify": "^1.6.6",
     "validator": "^13.11.0"
