--- a/portal-viaje/package.json
+++ b/portal-viaje/package.json
@@ -3,6 +3,10 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
@@ -11,7 +15,8 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "slugify": "^1.6.6",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "xss-clean": "^0.1.4"
   },
   "name": "portal-viaje",
   "version": "1.0.0",
